--- a/slim_care/protected/view/admin/globais/menu.html
+++ b/slim_care/protected/view/admin/globais/menu.html
@@ -36,6 +36,7 @@
                         </div>
                     </div>
                     <a href="{{base}}usuarios" class="nav-item nav-link"><i class="fa fa-th me-2"></i>Usuários</a>
+                    <a href="{{base}}locais" class="nav-item nav-link"><i class="fa fa-th me-2"></i>Locais</a>
                     <a href="widget.html" class="nav-item nav-link"><i class="fa fa-th me-2"></i>Widgets</a>
                     <a href="form.html" class="nav-item nav-link"><i class="fa fa-keyboard me-2"></i>Forms</a>
                     <a href="table.html" class="nav-item nav-link"><i class="fa fa-table me-2"></i>Tables</a>
