--- a/slim_care/protected/view/admin/globais/footer.html
+++ b/slim_care/protected/view/admin/globais/footer.html
@@ -9,11 +9,16 @@
     <script src="{{globais}}lib/tempusdominus/js/moment.min.js"></script>
     <script src="{{globais}}lib/tempusdominus/js/moment-timezone.min.js"></script>
     <script src="{{globais}}lib/tempusdominus/js/tempusdominus-bootstrap-4.min.js"></script>
+    
+    <!-- Datetable Stylesheet -->
+    <script src="{{globais}}js/jquery.dataTables.js"></script>
 
     <!-- Template Javascript -->
     <script src="{{globais}}js/main.js"></script>
     <script src="{{globais}}js/feedback.js"></script>
+    <script src="{{globais}}js/dataTable.js"></script>
     
+
 </body>
 
 </html>
