--- a/slim_care/protected/view/admin/globais/header.html
+++ b/slim_care/protected/view/admin/globais/header.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="utf-8">
-    <title>DASHMIN - Bootstrap Admin Template</title>
+    <title>Slim Care</title>
     <meta content="width=device-width, initial-scale=1.0" name="viewport">
     <meta content="" name="keywords">
     <meta content="" name="description">
@@ -29,6 +29,12 @@
 
     <!-- Template Stylesheet -->
     <link href="{{globais}}css/style-admin.css" rel="stylesheet">
+    
+    <!-- Datetable Stylesheet -->
+    <link href="{{globais}}css/jquery.dataTables.css" rel="stylesheet">
+
+    <!-- Stylesheet -->
+    <link href="{{globais}}css/main.css" rel="stylesheet">
 </head>
 <div id="alert-feedback" class="alert alert-feedback alert-dismissible fade show" role="alert" style="position: absolute;z-index: 999999;right: 0px;margin: 5px;min-width: 350px;display:none;">
     <span>{{report}}</span>
