--- a/slim_care/protected/view/admin/globais/menu.html
+++ b/slim_care/protected/view/admin/globais/menu.html
@@ -13,7 +13,7 @@
         <div class="sidebar pe-4 pb-3">
             <nav class="navbar bg-light navbar-light">
                 <a href="index.html" class="navbar-brand mx-4 mb-3">
-                    <h3 class="text-primary"><i class="fa fa-hashtag me-2"></i>Slim Care</h3>
+                    <h3 class="text-primary"></i>Slim Care</h3>
                 </a>
                 <div class="d-flex align-items-center ms-4 mb-4">
                     <div class="position-relative">
@@ -26,30 +26,13 @@
                     </div>
                 </div>
                 <div class="navbar-nav w-100">
-                    <a href="index.html" class="nav-item nav-link active"><i class="fa fa-tachometer-alt me-2"></i>Dashboard</a>
-                    <div class="nav-item dropdown">
-                        <a href="#" class="nav-link dropdown-toggle" data-bs-toggle="dropdown"><i class="fa fa-laptop me-2"></i>Elements</a>
-                        <div class="dropdown-menu bg-transparent border-0">
-                            <a href="button.html" class="dropdown-item">Buttons</a>
-                            <a href="typography.html" class="dropdown-item">Typography</a>
-                            <a href="element.html" class="dropdown-item">Other Elements</a>
-                        </div>
-                    </div>
-                    <a href="{{base}}usuarios" class="nav-item nav-link"><i class="fa fa-th me-2"></i>Usuários</a>
-                    <a href="{{base}}locais" class="nav-item nav-link"><i class="fa fa-th me-2"></i>Locais</a>
-                    <a href="widget.html" class="nav-item nav-link"><i class="fa fa-th me-2"></i>Widgets</a>
-                    <a href="form.html" class="nav-item nav-link"><i class="fa fa-keyboard me-2"></i>Forms</a>
-                    <a href="table.html" class="nav-item nav-link"><i class="fa fa-table me-2"></i>Tables</a>
-                    <a href="chart.html" class="nav-item nav-link"><i class="fa fa-chart-bar me-2"></i>Charts</a>
-                    <div class="nav-item dropdown">
-                        <a href="#" class="nav-link dropdown-toggle" data-bs-toggle="dropdown"><i class="far fa-file-alt me-2"></i>Pages</a>
-                        <div class="dropdown-menu bg-transparent border-0">
-                            <a href="signin.html" class="dropdown-item">Sign In</a>
-                            <a href="signup.html" class="dropdown-item">Sign Up</a>
-                            <a href="404.html" class="dropdown-item">404 Error</a>
-                            <a href="blank.html" class="dropdown-item">Blank Page</a>
-                        </div>
-                    </div>
+                    <a href="{{base}}admin/dashboard" class="nav-item nav-link active"><i class="fa fa-tachometer-alt me-2"></i>Dashboard</a>
+                    <a href="{{base}}admin/usuarios" class="nav-item nav-link"><i class="fa fa-user me-2"></i>Usuários</a>
+                    <a href="{{base}}admin/locais" class="nav-item nav-link"><i class="fa fa-home me-2"></i>Locais</a>
+                    <a href="{{base}}admin/agenda/disponivel" class="nav-item nav-link"><i class="fa fa-calendar me-2"></i>Disponiveis</a>
+                    <a href="{{base}}admin/agenda" class="nav-item nav-link"><i class="fa fa-calendar-check me-2"></i>Agendados</a>
+                    <a href="{{base}}admin/custos" class="nav-item nav-link"><i class="fa fa-credit-card me-2"></i>Despesas</a>
+                    <a href="{{base}}admin/relatorios" class="nav-item nav-link"><i class="fa fa-book me-2"></i>Relatório</a>
                 </div>
             </nav>
         </div>
@@ -61,14 +44,11 @@
             <!-- Navbar Start -->
             <nav class="navbar navbar-expand bg-light navbar-light sticky-top px-4 py-0">
                 <a href="index.html" class="navbar-brand d-flex d-lg-none me-4">
-                    <h2 class="text-primary mb-0"><i class="fa fa-hashtag"></i></h2>
+                    <h2 class="text-primary mb-0">S.C.</h2>
                 </a>
                 <a href="#" class="sidebar-toggler flex-shrink-0">
                     <i class="fa fa-bars"></i>
                 </a>
-                <form class="d-none d-md-flex ms-4">
-                    <input class="form-control border-0" type="search" placeholder="Search">
-                </form>
                 <div class="navbar-nav align-items-center ms-auto">
                     <div class="nav-item dropdown">
                         <a href="#" class="nav-link dropdown-toggle" data-bs-toggle="dropdown">
