--- a/slim_care/protected/view/admin/schedule/table.html
+++ b/slim_care/protected/view/admin/schedule/table.html
@@ -1,14 +1,17 @@
 
             <!-- Table Start -->
             <div class="container-fluid pt-4 px-4">
-                <div class="row g-4" style="text-align: end;">                    
-                    <a href='{{base}}admin/usuarios/cadastro'><button type="button" class="btn btn-primary m-2">Novo Usuário</button></a>
+               <div class="row g-4">
+                <div class="col-12">
+                    <div class="bg-light rounded h-100 p-4">
+                        <h6 class="mb-4">{{titulo}}</h6>
+                        {{form}}
+                    </div>
                 </div>
-                <div class="row g-4">
-                    
+                </div>
+                <div class="row g-4">                    
                     <div class="col-12">
                         <div class="bg-light rounded h-100 p-4">
-                            <h6 class="mb-4">{{titulo}}</h6>
                             <div class="table-responsive">
                                 {{table}}
                             </div>
