--- a/_/protected/view/admin/user/table.html
+++ b/_/protected/view/admin/user/table.html
@@ -1,9 +1,11 @@
 
             <!-- Table Start -->
             <div class="container-fluid pt-4 px-4">
-                <div class="row g-4" style="text-align: end;">                    
-                    <a href='{{base}}admin/usuarios/cadastro'><button type="button" class="btn btn-primary m-2">Novo Usuário</button></a>
-                </div>
+                 <!-- if $_SESSION['user_system']['group'] == "Administrador" --> 
+                    <div class="row g-4" style="text-align: end;">                    
+                        <a href='{{base}}admin/usuarios/cadastro'><button type="button" class="btn btn-primary m-2">Novo Usuário</button></a>
+                    </div>
+                 <!-- endif -->
                 <div class="row g-4">
                     
                     <div class="col-12">
